Update repository link in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   Pour cela il fallait tout d'abord trier les données, ensuite réaliser un code sur Python en utilisant la bibliothèque Pandas pour essayer de "faire parler ses données". J'ai donc appris à manier ce nouvel outil et j'ai réfléchi à la façon dont je pouvais modestement utiliser ces données pour créer des paramètres de performance pour évaluer les joueurs..</p>
   Je suis content d'avoir réussi à ma petite échelle pu permettre de donner des nouvelles idées sur la façon de coder ce genre de programme. J'ai pu travailler sur un code collaboratif et trouver des lacunes à corriger. Je suis content que un bout de mon code soit aujourd'hui utilisé sur le site par des milliers de personne. .</p>
   J'ai appris beaucoup et je souhaite encore en faire davantage et ce choix de travail confirme mon envie professionelle.</p>
-          <a href="LIEN_VERS_LE_REPO" class="btn">Voir le code</a>
+          <a href="https://github.com/ZnKlcc/wellplayed-data-analysis" class="btn">Voir le code</a>
       </div>
   
      
